--- a/index.html
+++ b/index.html
@@ -310,15 +310,18 @@
 
     </div>
     <div class="playbar">
-        <div class="controls flex justify-center align-center">
-            <img id="previous" class="p-2 invert" src="rewind.svg" alt="">
-            <img id="play" class="p-2 invert" src="play.svg" alt="">
-            <img id="next" class="p-2 invert" src="forward.svg" alt="">
-        </div>
-        <div class="seekbar">
-            <div class="circle">
-    
+        <div class="controls flex align-center">
+            <div class="controlbtn flex align-center justify-center">
+                <img id="previous" class="p-2 invert" src="rewind.svg" alt="">
+                <img id="play" class="p-2 invert" src="play.svg" alt="">
+                <img id="next" class="p-2 invert" src="forward.svg" alt="">
             </div>
+            <div class="songinfo"></div>
+        </div>
+        <div class="songtime"></div>
+        
+        <div class="seekbar">
+            <div class="circle"></div>
         </div> 
     </div>
     <script src="script.js"></script>
