--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@
         <div class="controls flex align-center">
             <div class="songinfo"></div>
             <div class="controlbtn flex align-center justify-center">
-                <img id="previous" class="p-2 invert" src="rewind.svg" alt="">
-                <img id="play" class="p-2 invert" src="play.svg" alt="">
-                <img id="next" class="p-2 invert" src="forward.svg" alt="">
+                <img id="previous" class="invert" src="rewind.svg" alt="">
+                <img id="play" class="invert" src="play.svg" alt="">
+                <img id="next" class="invert" src="forward.svg" alt="">
             </div>
             <div class="songtime"></div>
         </div>
