--- a/index.html
+++ b/index.html
@@ -310,19 +310,22 @@
 
     </div>
     <div class="playbar">
+        <div class="songinfo"></div>
         <div class="controls flex align-center">
-            <div class="songinfo"></div>
             <div class="controlbtn flex align-center justify-center">
                 <img id="previous" class="invert" src="rewind.svg" alt="">
                 <img id="play" class="invert" src="play.svg" alt="">
                 <img id="next" class="invert" src="forward.svg" alt="">
             </div>
-            <div class="songtime"></div>
         </div>
         
-        <div class="seekbar">
-            <div class="circle"></div>
-        </div> 
+        <div class="seek flex align-center justify-center">
+            <div class="songcurrent"></div>
+            <div class="seekbar">
+                <div class="circle"></div>
+            </div> 
+            <div class="songtime"></div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
